kustomize/overlays/scots-lab/apps/homebox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  namespace: homebox
  labels:
    app: homebox
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homebox
  template:
    metadata:
      labels:
        app: homebox
    spec:
      priorityClassName: homelab-data
      containers:
        - name: homebox
          image: ghcr.io/sysadminsmedia/homebox:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7745
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: homebox-data
