kustomize/overlays/scots-lab/apps/homebox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebox
  namespace: homebox
spec:
  ports:
    - port: 7745
      targetPort: 7745
      protocol: TCP
      name: http
  selector:
    app: homebox
