kustomize/overlays/scots-lab/apps/homebox/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homebox
  namespace: homebox
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Homebox
    gethomepage.dev/group: Applications
    gethomepage.dev/description: Inventory Management
    gethomepage.dev/icon: mdi-package-variant-closed
    gethomepage.dev/href: https://inventory.srbii.com
    gethomepage.dev/weight: '27'
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  hostnames:
  - inventory.srbii.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Forwarded-Proto
          value: https
    backendRefs:
    - name: homebox
      port: 7745
